# sent-class

./: README.md  pyproject.toml
src/sent_class/: analyser.py
tests/: test_sent_class.py
