[project]
name = "sent-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
